--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
+    "@newrelic/test-utilities": "^4.1.0",
+    "apollo-server": "^2.17.0",
     "eslint": "^7.8.1",
     "newrelic": "^6.13.0",
     "tap": "^14.10.8"
